<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical">
    <fragment
        android:name="com.bignerdranch.android.mymobiletrainer.CustomerFragment"
        android:id="@+id/customer_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center_horizontal"
        android:text="@string/customer_billing"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/sign_completed_session"/>

    <Button
        android:id="@+id/credit_card"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credit_card_info"
        android:icon="@drawable/credit_card_info"/>

    <Button
        android:id="@+id/print_reciept"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/printer_button"/>

    <Button
        android:id="@+id/email_receipt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_button"
        android:icon="@drawable/email_icon"/>

<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/fragment_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="com.bignerdranch.android.mymobiletrainer.CustomerFragment">



</FrameLayout>-->
</LinearLayout>
