<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:gravity="center"
              android:orientation="vertical">
    <fragment
        android:name="com.bignerdranch.android.mymobiletrainer.CustomerFragment"
        android:id="@+id/customer_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <Button
        android:id="@+id/view_sessions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_sessions"
        android:icon="@drawable/view_customer_session"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/check_session"
        android:icon="@drawable/check_complete"/>
    <Button
        android:id="@+id/edit_sessions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_session"/>


</LinearLayout>